--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 
         <div class="music">
           <div class="container">
-            <a href="https://www.youtube.com/" target="_blank">
+            <a href="https://www.youtube.com/playlist?list=PLxw98VrwjH-Z3HKonPTUV-b3GPFkxYdLW" target="_blank">
               <img src="assets/Youtube_Music_icon.svg" alt="Youtube Music icon">
             </a>
           </div>
