--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
       <div class="headline">
         <h1>
           Jaeha Lee,<br>
-          A Software Engineer.
+          A Software Developer.
         </h1>
         <p>
           Student at The Ohio State University from Korea.<br>
@@ -119,27 +119,27 @@
 
       <div class="contents">
         <div>
-          <img src="assets/java-14.svg" alt="Java">
+          <img src="assets/java.svg" alt="Java">
           <span>Java</span>
         </div>
         <div>
-          <img src="assets/python-logo-only.svg" alt="Python">
+          <img src="assets/python.svg" alt="Python">
           <span>Python</span>
         </div>
         <div>
-          <img src="assets/C_logo.svg" alt="C">
+          <img src="assets/c.svg" alt="C">
           <span>C</span>
         </div>
         <div>
-          <img src="assets/html-1.svg" alt="HTML">
+          <img src="assets/html.svg" alt="HTML">
           <span>HTML</span>
         </div>
         <div>
-          <img src="assets/css-3.svg" alt="CSS">
+          <img src="assets/css.svg" alt="CSS">
           <span>CSS</span>
         </div>
         <div>
-          <img src="assets/javascript-1.svg" alt="Javascript">
+          <img src="assets/javascript.svg" alt="Javascript">
           <span>Javascript</span>
         </div>
         <div>
@@ -167,7 +167,7 @@
       <div class="contents">
         <div class="school">
           <div class="container">
-            <img src="The_Ohio_State_University_Logo.jpg" alt="OSU">
+            <img src="assets/The_Ohio_State_University_Logo.jpg" alt="OSU">
           </div>
           <div class="explanation">
             <p class="degree">
@@ -196,7 +196,7 @@
       <div class="contents">
         <div class="job">
           <div class="container">
-            <img src="mark01.png" class="army" alt="OSU">
+            <img src="assets/army.png" class="army" alt="OSU">
           </div>
           <div class="description army">
             <h3 class="title">Sergeant</h3>
@@ -211,7 +211,7 @@
 
         <div class="job">
           <div class="container">
-            <img src="ohio_state_buckeyes_logo_secondary_19752595.png" class="osu" alt="OSU">
+            <img src="assets/Ohio_State_logo.png" class="osu" alt="OSU">
           </div>
           <div class="description">
             <div>
@@ -248,7 +248,7 @@
       <a href="https://www.linkedin.com/in/jaehalee7939/" target="_blank"><i class="fa-brands fa-linkedin"></i></a>
       <a href="https://www.instagram.com/jaeha_7939/" target="_blank"><i class="fa-brands fa-instagram"></i></a>
       <a href="https://github.com/dlwogk7939" target="_blank"><i class="fa-brands fa-github"></i></a>
-      <a href="https://leetcode.com/u/dlwogk7939/" target="_blank"><img src="leetcode-svgrepo-com.svg"></img></a>
+      <a href="https://leetcode.com/u/dlwogk7939/" target="_blank"><img src="assets/leetcode-svgrepo-com.svg"></img></a>
       <a href="https://docs.google.com/document/d/1bw7EaW2boEXv89vO4m7vZ2c8mVB5kPMQxHvLJe80NpQ/edit" target="_blank"><i
           class="fa-regular fa-file"></i></a>
       <a href="mailto:dlwogk121@gmail.com"><i class="fa-regular fa-envelope"></i></a>
