--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
         <li><a href="#skills" onclick="scrollToSection('skills')">Skills</a></li>
         <li><a href="#education" onclick="scrollToSection('education')">Education</a></li>
         <li><a href="#experience" onclick="scrollToSection('experience')">Experience</a></li>
+        <li><a href="games">Games</a></li>
       </ul>
     </nav>
   </header>
